Added new status information as Per Alan Doyle's email. Draft Community --> Recommended

--- a/archive/design/dap/dap2/dap_2_data_model.tex
+++ b/archive/design/dap/dap2/dap_2_data_model.tex
@@ -25,14 +25,13 @@
 \htmlname{dap2.0}
 
 \eseRfcnumber{004.0.09}
-\eseCategory{Draft Community Standard}
+\eseCategory{Recommended Standard}
 \eseUpdates{None}
 \eseAuthor{Gallagher, Potter, Sgouros, Hankin, Flierl}
 \eseTitle{DAP 2.0 Standard}
 \eseDate{\rcsInfoDate}
-\eseStatus{This is a description of a Draft ESE Community Standard}
-\eseDistribution{Distribution of this Draft ESE Community Standard is
-  unlimited.}
+\eseStatus{This is a NASA Earth Science Data Systems Recommended Standard}
+\eseDistribution{Distribution of this document is unlimited.}
 
 \eseChange{{\bf 004.0.09}, 28 August 2007, Added missing double quotes to
   grammar rules for \emph{array-dim} ) (now called
