Updated with the latest revision as per message from Alan Doyle.

--- a/archive/design/dap/dap2/dap_2_data_model.tex
+++ b/archive/design/dap/dap2/dap_2_data_model.tex
@@ -24,7 +24,7 @@
 \htmldirectory{html}
 \htmlname{dap2.0}
 
-\eseRfcnumber{004.0.09}
+\eseRfcnumber{004.1.1}
 \eseCategory{Recommended Standard}
 \eseUpdates{None}
 \eseAuthor{Gallagher, Potter, Sgouros, Hankin, Flierl}
@@ -33,7 +33,9 @@
 \eseStatus{This is a NASA Earth Science Data Systems Recommended Standard}
 \eseDistribution{Distribution of this document is unlimited.}
 
-\eseChange{{\bf 004.0.09}, 28 August 2007, Added missing double quotes to
+\eseChange{{\bf 004.1.1}, 8 October 2007, Updated version number to
+  reflect current status.\\
+  {\bf 004.0.09}, 28 August 2007, Added missing double quotes to
   grammar rules for \emph{array-dim} (now called
   \emph{projection-array-dim}), corrected an error in the
   grammar for a CE (although servers can accept an \emph{id} without a
